--- a/src/css/app.css
+++ b/src/css/app.css
@@ -23,22 +23,33 @@ body
 	position : relative;
 }
 
-.datepicker__calendar
+.datepicker__calendar-container
 {
 	opacity          : 0;
 	visibility       : hidden;
 	position         : absolute;
-	width            : 100%;
-	height           : 200px;
+	width            : 300px;
 	border           : 1px solid #ccc;
 	box-shadow       : 0 1px 1px rgba( 0,0,0,.075 );
 	background-color : #fff;
 	transition       : all .3s;
 }
 
-.datepicker.datepicker__active .datepicker__calendar
+.datepicker.datepicker__active .datepicker__calendar-container
 {
 	opacity    : 1;
 	visibility : visible;
 	margin-top : 10px;
+}
+
+.datepicker__calendar-table
+{
+	table-layout : fixed;
+	width        : 100%;
+}
+
+.datepicker__calendar-table td
+{
+	text-align: center;
+	padding : 5px;
 }
