--- a/src/css/datepicker.css
+++ b/src/css/datepicker.css
@@ -11,7 +11,8 @@
 	position         : absolute;
 	width            : 300px;
 	border           : 1px solid #ccc;
-	box-shadow       : 0 1px 1px rgba( 0,0,0,.075 );
+	border-radius    : 4px;
+	box-shadow       : 1px 1px 1px rgba( 0, 0, 0, .1 );
 	background-color : #fff;
 	transition       : all .3s;
 	user-select      : none;
