--- a/src/css/timepicker.css
+++ b/src/css/timepicker.css
@@ -57,3 +57,9 @@
 {
 	background-color : rgba( 0,0,0,.05 );
 }
+
+.timepicker__hours__container ul li.selected a
+{
+	color            : #fff;
+	background-color : #337ab7;
+}
