--- a/src/css/datepicker.css
+++ b/src/css/datepicker.css
@@ -9,16 +9,15 @@
 	background-color : transparent;
 	border           : none;
 	float            : right;
-	font-size        : 20px;
+	font-size        : 18px;
 	padding          : 0;
-	margin-left      : 8px;
-	margin-top       : 5px;
 	cursor           : pointer;
 }
 
 .datepicker__calendar__container
 {
 	opacity          : 0;
+	z-index          : 1;
 	visibility       : hidden;
 	position         : absolute;
 	width            : 300px;
