--- a/src/css/timepicker.css
+++ b/src/css/timepicker.css
@@ -9,10 +9,8 @@
 	background-color : transparent;
 	border           : none;
 	float            : right;
-	font-size        : 20px;
+	font-size        : 18px;
 	padding          : 0;
-	margin-left      : 8px;
-	margin-top       : 5px;
 	cursor           : pointer;
 }
 
@@ -20,6 +18,7 @@
 {
 	overflow-y       : scroll;
 	opacity          : 0;
+	z-index          : 1;
 	visibility       : hidden;
 	position         : absolute;
 	width            : 200px;
