--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,6 +7,17 @@ body
 {
 }
 
+.form-group
+{
+	display       : inline-block;
+	margin-bottom : 20px;
+}
+
+.form-group + .form-group
+{
+	margin-left : 20px;
+}
+
 .form-control
 {
 	padding       : 6px 12px;
@@ -14,7 +25,50 @@ body
 	border        : 1px solid #ccc;
 	color         : #555;
 	font-size     : 14px;
-	box-shadow    : inset 0 1px 1px rgba( 0,0,0,.075 );
+	box-shadow    : inset 0 1px 1px rgba( 0, 0, 0, .075 );
+}
+
+.btn
+{
+	background-color : transparent;
+	border           : 1px solid transparent;
+	padding          : 6px 12px;
+	color            : #555;
+	border-radius    : 4px;
+	width            : 62px;
+	cursor           : pointer;
+	transition       : all .3s;
+}
+
+.btn + .btn
+{
+	margin-left : 20px;
+}
+
+.btn.btn-primary
+{
+	color            : #ffffff;
+	background-color : #337ab7;
+	border-color     : #2e6da4;
+}
+
+.btn-primary:hover
+{
+	background-color : #286090;
+	border-color     : #204d74;
+}
+
+.btn.btn-danger
+{
+	color            : #ffffff;
+	background-color : #d9534f;
+	border-color     : #d43f3a;
+}
+
+.btn-danger:hover
+{
+	background-color : #c9302c;
+	border-color     : #ac2925;
 }
 
 .datepicker__trigger,
@@ -23,9 +77,4 @@ body
 	font-size   : 20px;
 	margin-left : 8px;
 	margin-top  : 5px;
-}
-
-.timepicker
-{
-	margin-left : 20px;
 }
