--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,25 +1,46 @@
 *
 {
-	box-sizing : border-box;
+	font-family : 'Lato', sans-serif;
+	box-sizing  : border-box;
 }
 
 body
 {
+	position         : absolute;
+	height           : 100%;
+	margin           : 0;
+	width            : 100%;
+	display          : flex;
+	align-items      : center;
+	justify-content  : center;
+	background-color : #ddf4ff;
 }
+
+.container
+{
+	width         : 50%;
+	background    : white;
+	padding       : 30px;
+	border-radius : 4px;
+	box-shadow    : 1px 1px 1px rgba( 0, 0, 0, 0.16 );
+}
+
+h2 { margin-top: 0; }
+
+.text-center { text-align: center; }
 
 .form-group
 {
-	display       : inline-block;
+	float         : left;
 	margin-bottom : 20px;
-}
-
-.form-group + .form-group
-{
-	margin-left : 20px;
+	margin-top    : 24px;
+	width         : 50%;
 }
 
 .form-control
 {
+	width         : 80%;
+	float         : left;
 	padding       : 6px 12px;
 	border-radius : 4px;
 	border        : 1px solid #ccc;
@@ -71,10 +92,19 @@ body
 	border-color     : #ac2925;
 }
 
-.datepicker__trigger,
-.timepicker__trigger
+.filters-wrapper p
 {
-	font-size   : 20px;
-	margin-left : 8px;
-	margin-top  : 5px;
+	margin : 0 0 5px 0px;
+}
+
+.filters-wrapper .filters
+{
+	padding          : 10px;
+	background-color : #ddf4ff;
+	border-radius    : 4px;
+}
+
+.radio
+{
+	margin: 10px 0;
 }
