--- a/src/css/grid-system.css
+++ b/src/css/grid-system.css
@@ -1,3 +1,12 @@
+.container
+{
+	width         : 50%;
+	background    : white;
+	padding       : 30px;
+	border-radius : 4px;
+	box-shadow    : 1px 1px 1px rgba( 0, 0, 0, 0.16 );
+}
+
 [class^=col-]
 {
 	float   : left;
@@ -7,3 +16,12 @@
 .col-4 { width: 33.33333333%; }
 .col-8 { width: 66.66666667%; }
 .col-12 { width: 100%; }
+
+@media ( min-width: 210px ) and ( max-width: 609px ) {
+	[class^=col-] { float: none; }
+	.col-4 { width: 100%;  }
+	.col-8 { width: 100%;  }
+}
+
+@media ( min-width: 210px ) and ( max-width: 900px ) { .container { width: 100%; } }
+@media ( min-width: 901px ) and ( max-width: 1210px ) { .container { width: auto;  } }
